--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@tailwindcss/postcss": "^4.1.17",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-router": "^7.10.1",
+    "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
   }
 }
