--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "parcel": "^2.16.3"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.1",
     "@tailwindcss/postcss": "^4.1.17",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-redux": "^9.2.0",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
     "tailwindcss": "^4.1.17"
